# rust-to-elixir-phoenix-sample

./: .env  .gitignore  README.md  mix.exs
assets/: package-lock.json
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: rust_phx_sample.ex  rust_phx_sample_web.ex
lib/rust_phx_sample/: application.ex
lib/rust_phx_sample_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/rust_phx_sample_web/channels/: user_socket.ex
lib/rust_phx_sample_web/controllers/: page_controller.ex  sample_controller.ex  user_controller.ex
lib/rust_phx_sample_web/templates/layout/: app.html.eex
lib/rust_phx_sample_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex  sample_view.ex  user_view.ex
native/rustphxsampleweb_samplecontroller/: Cargo.toml  README.md
native/rustphxsampleweb_samplecontroller/src/: lib.rs
native/rustphxsampleweb_usercontroller/: Cargo.toml  README.md
native/rustphxsampleweb_usercontroller/migrations/2020-11-01-042520_create_users/: up.sql
native/rustphxsampleweb_usercontroller/src/: lib.rs  models.rs  schema.rs
test/rust_phx_sample_web/controllers/: page_controller_test.exs
test/rust_phx_sample_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex
